--- a/bms/templates/bms/client_ui/base.html
+++ b/bms/templates/bms/client_ui/base.html
@@ -84,7 +84,7 @@
             showTab($a);
       })
     </script>
-    <script src="{% static 'jquery-weui/js/jquery-weui.js'%}"></script>
+    <script src="{% static 'jquery-weui/js/jquery-weui.min.js'%}"></script>
     <script src="{% static 'jquery-weui/js/tool-kit.js'%}"></script>
   </body>
 </html>
